adding banner and Details section add it

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,20 +32,20 @@ const { title, description, structuredData, keywords } = Astro.props;
       )
     }
     <SEO
-      title={title ?? "UNV Authorized distributor in Dubai,U.A.E"}
+      title={title ?? "Ezviz Dubai Authorized distributor in Dubai,U.A.E"}
       description={description ??
-        "unvdubai is an authorized distributor of UNV products in Dubai, UAE"}
+        "Ezviz Dubai is an authorized distributor of Ezviz Dubai products in Dubai, UAE"}
       canonical={canonicalURL}
       openGraph={{
         basic: {
-          title: title ?? "UNV Authorized distributor in Dubai,U.A.E",
+          title: title ?? "Ezviz Dubai Authorized distributor in Dubai,U.A.E",
           type: "article",
-          image: "https://unvdubai.com/unvdubai.png",
+          image: "",
         },
         optional: {
           description:
             description ??
-            "Unvdubai is an authorized distributor of UNV products in Dubai, UAE",
+            "Ezviz Dubai is an authorized distributor of UNV products in Dubai, UAE",
           siteName: "unv distributor in Dubai",
           locale: "en_Us",
         },
@@ -55,33 +55,33 @@ const { title, description, structuredData, keywords } = Astro.props;
         creator: "@unvdubai",
         site: "@Unvdubai",
         title: title ?? "UNV Authorized distributor in Dubai,U.A.E",
-        image: "https://unvdubai.com/unvdubai.png",
-        imageAlt: "unvdubai",
+        image: "",
+        imageAlt: "Ezviz Dubai",
         description:
           description ??
-          "unvdubai is an authorized distributor of UNV products in Dubai, UAE.",
+          "Ezviz Dubai is an authorized distributor of UNV products in Dubai, UAE.",
       }}
       extend={{
         meta: [
           {
             name: "keywords",
             content:
-              "UNV distributor, Dubai, UAE, surveillance, security" + keywords,
+              "Ezviz Dubai distributor, Dubai, UAE, surveillance, security" + keywords,
           },
           { name: "robots", content: "index, follow" },
           { name: "language", content: "English" },
-          { name: "Author", content: "UNV Dubai" },
+          { name: "Author", content: "Ezviz Dubai" },
           {
             name: "organization",
             content: JSON.stringify({
               "@context": "http://schema.org",
               "@type": "Organization",
-              name: "unvdubai",
-              url: "https://unvdubai.com/",
-              logo: "https://dubai-hikvision.com/logo.jpg",
+              name: "Ezviz Dubai",
+              url: "",
+              logo: "",
               description:
                 description ??
-                "unvdubai is an authorized distributor of UNV products in Dubai, UAE.",
+                "Ezviz Dubai is an authorized distributor of UNV products in Dubai, UAE.",
               address: {
                 "@type": "PostalAddress",
                 streetAddress: "Market, Naif, Deira",
