--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,12 @@
 
 import Layout from '../layouts/Layout.astro';
 import "../styles/global.css";
+import Hero from '../components/Hero.astro';
+import Details from '../components/Details.astro';
 ---
 
 <Layout>
-  <h1 class="text-yellow-300 text-3xl font-bold mb-4">Welcome to Astro!</h1>
+  <Hero/>
+  <Details/>
 
 </Layout>
