front banner will be finished tommorow

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,7 +13,7 @@ const items: CarouselItem[] = [
     title: "OUR PRODUCTS",
     description: "Cutting-edge surveillance solutions designed for superior performance.",
     ctaText: "Explore Our Products",
-    desktopImage: "/images/categories/products/hero/ProductsLaptopBanner.jpg",
+    desktopImage: "/images/Banner/Banner (1).jpg",
     mobileImage: "/images/categories/products/hero/mobile4.jpg",
     link: "/products"
   },
@@ -21,7 +21,7 @@ const items: CarouselItem[] = [
     title: "LATEST BLOGS",
     description: "Enhance your home's security with state-of-the-art monitoring solutions.",
     ctaText: "Discover More",
-    desktopImage: "/images/categories/products/hero/BlogsLaptopBanner.jpg",
+    desktopImage: "/images/Banner/Banner (2).jpg",
     mobileImage: "/images/categories/products/hero/Sana 2.jpg",
     link: "/blog"
   },
@@ -29,7 +29,7 @@ const items: CarouselItem[] = [
     title: "INSIGHTS",
     description: "Top-tier surveillance solutions tailored for businesses and institutions.",
     ctaText: "Explore Insights",
-    desktopImage: "/images/categories/products/hero/InsightsLaptopBanner.jpg",
+    desktopImage: "/images/Banner/Banner (3).jpg",
     mobileImage: "/images/categories/products/hero/mobile5.jpg",
     link: "/insights"
   }
