--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,16 @@
 ---
-
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
-import Hero from '../components/Hero.astro';
-import Details from '../components/Details.astro';
+import Hero from "../components/Hero.astro";
+import Details from "../components/Details.astro";
+import Ezviz from "../components/Ezviz.astro";
+import Products from "../components/Products.astro";
 ---
 
 <Layout>
-  <Hero/>
-  <Details/>
+  <Hero />
+  <Products />
+  <Details />
 
+  <Ezviz />
 </Layout>
