little upadate from yesterday

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
-import Navbar from "../components/Navbar.astro";	
+import Navbar from "../components/Navbar.astro";
 import { SEO } from "astro-seo";
+import Footer from "~/components/Footer.astro";
 
 // import GoogleAnalytics from "../components/GoogleAnalytics.astro";
 
@@ -66,7 +67,8 @@ const { title, description, structuredData, keywords } = Astro.props;
           {
             name: "keywords",
             content:
-              "Ezviz Dubai distributor, Dubai, UAE, surveillance, security" + keywords,
+              "Ezviz Dubai distributor, Dubai, UAE, surveillance, security" +
+              keywords,
           },
           { name: "robots", content: "index, follow" },
           { name: "language", content: "English" },
@@ -103,13 +105,13 @@ const { title, description, structuredData, keywords } = Astro.props;
   </head>
 
   <body class="bg-white">
-  <Navbar />
-
+    <Navbar />
     <!-- Content Container -->
     <div class="mx-auto px-4 sm:px-6 lg:px-8">
       <main>
         <slot />
       </main>
     </div>
+    <Footer />
   </body>
 </html>
