--- a/src/pages/product/index.astro
+++ b/src/pages/product/index.astro
@@ -12,7 +12,7 @@ const categories = [
     description:
       "Uniview provides affordable, high-quality IP cameras with smart analytics and performance",
     imageUrl: "/images/produccat/Wififree.png",
-    href: "/categories/ip-cameras",
+    href: "/categories/wifiFree",
     icon: "video",
   },
   {
