--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -27,7 +27,7 @@
       <nav class="hidden md:flex items-center space-x-8">
         <a href="/" class="text-white hover:text-gray-400 font-medium transition-colors duration-200">Home</a>
         <a href="/product" class="text-white hover:text-gray-400 font-medium transition-colors duration-200">Products</a>
-        <a href="/cloudplay" class="text-white hover:text-gray-400 font-medium transition-colors duration-200">CloudPlay</a>
+        <a href="/aboutus" class="text-white hover:text-gray-400 font-medium transition-colors duration-200">About Us</a>
         <a href="/where-to-buy" class="text-white hover:text-gray-400 font-medium transition-colors duration-200">Where to buy</a>
         <a href="/support" class="text-white hover:text-gray-400 font-medium transition-colors duration-200">Support</a>
       </nav>
