--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -28,7 +28,7 @@
         <a href="/" class="text-white hover:text-gray-400 font-medium transition-colors duration-200">Home</a>
         <a href="/product" class="text-white hover:text-gray-400 font-medium transition-colors duration-200">Products</a>
         <a href="/aboutus" class="text-white hover:text-gray-400 font-medium transition-colors duration-200">About Us</a>
-        <a href="/where-to-buy" class="text-white hover:text-gray-400 font-medium transition-colors duration-200">Where to buy</a>
+        <a href="/contact" class="text-white hover:text-gray-400 font-medium transition-colors duration-200">Contact Us</a>
         <a href="/support" class="text-white hover:text-gray-400 font-medium transition-colors duration-200">Support</a>
       </nav>
 
