--- a/src/pages/categories/poecamera.astro
+++ b/src/pages/categories/poecamera.astro
@@ -1,8 +1,7 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import { getCollection } from 'astro:content';
-import "./src/styles/global.css";
-
+import "../../styles/global.css";
 const products = await getCollection('wifi-free');
 ---
 
